@@ -896,7 +896,7 @@ static SyscallTableEntry syscall_main_table[] = {
    //..    GENX_(__NR_init_module,       sys_init_module),       // 128
    //..    //   (__NR_delete_module,     sys_delete_module),     // 129
    //..    GENX_(__NR_get_kernel_syms,   sys_ni_syscall),        // 130
-   //..    LINX_(__NR_quotactl,          sys_quotactl),          // 131
+   LINXY (__NR_quotactl,               sys_quotactl),                // 131
    GENX_ (__NR_getpgid,                sys_getpgid),                 // 132
    GENX_ (__NR_fchdir,                 sys_fchdir),                  // 133
    //..    //   (__NR_bdflush,           sys_bdflush),           // 134
@@ -1178,7 +1178,7 @@ static SyscallTableEntry syscall_main_table[] = {
    LINXY(__NR_epoll_pwait2,      sys_epoll_pwait2),      // 441
    LINX_(__NR_mount_setattr,     sys_mount_setattr),     // 442
 
-   LINX_(__NR_quotactl_fd,             sys_quotactl_fd),             // 443
+   LINXY(__NR_quotactl_fd,             sys_quotactl_fd),             // 443
    LINXY(__NR_landlock_create_ruleset, sys_landlock_create_ruleset), // 444
    LINX_(__NR_landlock_add_rule,       sys_landlock_add_rule),       // 445
    LINX_(__NR_landlock_restrict_self,  sys_landlock_restrict_self),  // 446
